--- a/index.html
+++ b/index.html
@@ -1,11 +1,89 @@
 <html> 
 <head>
+<style> 
+
+			body {
+				background-color: #ff3300;
+				background: linear-gradient(#ff33cc, #D586F9);
+				padding: 0;
+			}
+			
+			::selection {
+				background-color: #000;
+			}
+
+
+			
+			
+
+			
+.transparency {
+	display:block;
+	text-align: center; 
+	width:100%;
+	font-family: arial, sans serif; 
+	font-weight: bold; 
+	font-style: italic; 
+	text-transform: uppercase;
+	margin-top: 100px;
+	font-size: 100px;
+	color: #ff3333;
+	background: -webkit-linear-gradient(#D586F9, #000);
+  				-webkit-background-clip: text;
+ 				-webkit-text-fill-color: transparent;
+}
+
+.other {
+	display: block; 
+	width: 300px; 
+	margin: 0 auto; 
+	font-family: arial; 
+	font-size: 20px; 
+	text-align: center;
+}
+
+
+.hecticshit {
+			
+			width: 100%;
+			height: auto;
+			overflow:hidden;
+			display:block; 
+			margin: 0;
+			position: absolute; 
+			top: 0px;
+			left: 0px;
+			}
+			
+			.hecticshit div {
+			animation: marquee 20s linear infinite;
+			display: inline-block;
+			width: 2200px;
+			height: auto;
+			overflow-x: visible;
+			}
+			
+			.hecticshit span:hover {
+			   animation-play-state: paused
+			}
+			
+			@keyframes marquee {
+			0%   { transform: translate(0, 0); }
+			100% { transform: translate(-100%, 0); }
+			}
+
+</style> 
+
 
 </head> 
 
 <body> 
-<marquee><h1>usu board is still in camera</h1></marquee> 
-
+<div class="hecticshit">
+<div>
+<div class="transparency"><span>usu board is still in camera</span></div>
+<div class="other">also happy birthday Cathy @catherinebouris and tpain</div>
+</div>
+</div> 
 </body> 
 
 
