no longer in camera!!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 			body {
 				background-color: #ff3300;
-				background: linear-gradient(#ff33cc, #D586F9);
+				background: linear-gradient(aqua, #D586F9);
 				padding: 0;
 			}
 			
@@ -80,7 +80,7 @@
 <body> 
 <div class="hecticshit">
 <div>
-<div class="transparency"><span>usu board is still in camera</span></div>
+<div class="transparency"><span>no!! usu board is no longer in camera!!</span></div>
 <div class="other">also happy birthday Cathy @catherinebouris and tpain</div>
 </div>
 </div> 
